tests/ui/removals_chan.gopp
package main
func g() int {
    ch := chan[int](1)
    v := <-ch //~ ERROR <- was removed in go++
    _ = v
    return 0
}
func main() {}
